fixed navbar navigation errors on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,15 @@ a {
 * {
   box-sizing: border-box;
 }
-
+body {
+  min-height: 100vh;
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: fill-available;
+  height: -webkit-fill-available;
+}
 @media (prefers-color-scheme: dark) {
   html {
   }
